contributing to this release.

{{{ Syntax Highlighting

- Updated Icon syntax highlighting (Silas Smith).

- Updated Pike syntax highlighting (Peter Lundqvist).

- The "if" in #include <net/if.h> is no longer highlighted in C and C++
  modes.

}}}
{{{ Miscellaneous Changes

- Drag and drop in the text area. You can disable this in the Mouse pane
  of the Global Options dialog box.

- Files that don't exist on disk are no longer saved in the perspective
  (Ollie Rutherfurd).

- The end of a fold is now indicated in the gutter.

- Added "Plugin Options" button to plugin manager.

- Pressing a non-alphanumeric character with the 'Complete Word' popup
  showing now inserts the currently selected entry first, instead of
  just closing the popup and then inserting the entered character.

- If there are several search results in one line, clicking the line in
  the HyperSearch Results window now selects all occurrences, not just
  the first one.

- If regular expressions are on, the search bar now shows an error
  message instead of silently failing if you attempt a reverse search
  with S+ENTER (reverse search with regular expressions is not
  supported).

}}}
{{{ Bug Fixes

- Fixed international keys on MacOS X.

- "Multiple results" button in the HyperSearch Results window did not
  work correctly.

- Line number shown in status bar when matching brackets was off by one.

- Fixed some usability issues with the "Search in selection" setting in
  the Find dialog box.

- Directory search settings were being reset when a search flag was
  changed.

- Fixed handling of space bar which could result in extra spaces being
  inserted when using dead keys.

- Fixed NullPointerException sometimes thrown when scrolling to the line
  after the last visible line with electric scrolling switched off.

- Fixed problems such as ArrayIndexOutOfBoundsExceptions or the
  beginning of the buffer becoming inaccessible when expanding the last
  fold in a buffer.
